--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -30,4 +30,5 @@ jobs:
 
     - name: Check for changes
       run: |
-        git status
+        git diff --quite; nochanges=$?
+        echo $nochanges
