--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -30,5 +30,5 @@ jobs:
 
     - name: Check for changes
       run: |
-        git diff --quite; nochanges=$?
+        git diff --quiet; nochanges=$?
         echo $nochanges
