--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -32,3 +32,7 @@ jobs:
       run: |
         git diff --quiet; nochanges=$?
         echo $nochanges
+
+    - name: Apply changes
+      if: ${{ $nochanges == 1 }}
+      run: git status
