--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -34,5 +34,5 @@ jobs:
         echo $nochanges
 
     - name: Apply changes
-      if: ${{ $nochanges == 1 }}
+      if: ${{ nochanges }} == 1
       run: git status
