Update env var setting

--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -8,16 +8,13 @@ jobs:
   update-table:
 
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
@@ -30,8 +27,7 @@ jobs:
 
     - name: Check for changes
       run: |
-        git diff --quiet; nochanges=$?
-        echo $nochanges >> $GITHUB_ENV
+        echo "nochanges=$(git diff --quiet)" >> $GITHUB_ENV
 
     - name: Apply changes
       if: ${{ env.nochanges == 1 }}
