--- a/.github/workflows/update-table.yml
+++ b/.github/workflows/update-table.yml
@@ -27,11 +27,11 @@ jobs:
 
     - name: Check for changes
       run: |
-        echo "nochanges=$(git diff --quiet)" >> $GITHUB_ENV
-        echo ${{ env.nochanges }}
+        echo "CHANGES=$(git status --porcelain)" >> $GITHUB_ENV
+        echo ${{ env.CHANGES }}
 
     - name: Create pull request
-      if: ${{ env.nochanges == 1 }}
+      if: ${{ env.CHANGES }} != ""
       uses: peter-evans/create-pull-request@v3
       with:
           token: ${{ secrets.ACCESS_TOKEN }}
