--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -5,8 +5,7 @@ addReviewers: true
 addAssignees: false
 
 # A list of reviewers to be added to pull requests (GitHub user name)
-reviewers:
-  - nikola-rados
+# reviewers:
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
